# trimtrain

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci-image.yml
include/: trimtrain.h
src/: main.cpp
test/: trimtrain_test.cpp
